--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/search"
                 android:inputType="text"
-                android:maxLines="1" />
+                android:maxLines="1"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageView
@@ -49,7 +50,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
+        tools:listitem="@layout/item_user"/>
 
     <ProgressBar
         android:id="@+id/progress_bar"
