--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="96dp">
+    android:layout_height="96dp"
+    >
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/iv_user"
@@ -22,7 +23,6 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/poppinsmedium"
         android:textSize="16sp"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/iv_user"
         app:layout_constraintStart_toEndOf="@+id/iv_user"
         app:layout_constraintTop_toTopOf="@+id/iv_user"
